# boligportal-alert

./: Cargo.toml  README.md
src/: bolig_response.rs  main.rs  payload.rs
